<resources>
    <string name="app_name">Healthy</string>
    <string name="textview_splash_HEA">HEA</string>
    <string name="textview_splash_THY">THY</string>
    <string name="textview_header_title">TUTORIAL</string>
    <string name="textview_main_title">TUTORIAL</string>
    <string name="textview_home_title">HOME</string>
    <string name="textview_text_provice">Hà Nội</string>
    <string name="textview_contraindication_item_drug_detail">Chống chỉ định</string>
    <string name="textview_usage_item_drug_detail">Cách sử dụng</string>
    <string name="textview_info_item_drug_detail">Thông tin</string>
    <string name="textview_fav">Chưa có dữ liệu yêu thích</string>
    <string name="textview_remind_item_setting">Nhắc nhở</string>
    <string name="textview_remind_drug_item_setting">Uống thuốc</string>
    <string name="textview_remind_healthy_item_setting">Bảo vệ sức khỏe</string>
    <string name="textview_feedback_item_setting">Feedback</string>
    <string name="textview_set_time">Set Time</string>
    <string name="textview_time_remind_item_setting">8</string>
    <string name="textview_b_remind_item_setting">:</string>
    <string name="textview_min_remind_item_setting">30</string>
    <string name="edt_name_feedback_item_setting">Enter your name</string>
    <string name="edt_email_feedback_item_setting">Enter your email</string>
    <string name="edt_content_feedback_item_setting">Enter your feedback</string>
    <string name="textview_btn_send_feedback">GỞI</string>
    <string name="textview_chose_photo_item_detect">Chọn hình ảnh</string>
    <string name="google_api_key">AIzaSyAfEt1XzMNAttrnEGLGiz11A5u9jjkGhuA</string>
    <string name="message_no_service_provider_available">No Service Provider Available</string>
    <string name="title_GPS_Not_Enabled">GPS Not Enabled</string>
    <string name="message_Do_you_wants_to_turn_On_GPS">Do you wants to turn On GPS</string>
    <string name="message_Yes">Yes</string>
    <string name="message_No">No</string>
    <string name="message_you_are_here">you are here</string>
    <string name="message_not_found_address">Not Found Address</string>
    <string name="edt_search">Search</string>

    <string-array name="slide_tutorial">
        <item>You can detect drug to get some information about it</item>
        <item>My app give you all hospital in vietnam about information and map</item>
        <item>My app give you some useful information about drug</item>
        <item>you can save some informations which you like</item>
        <item>you can setting to my app remind you</item>
    </string-array>
    <string-array name="message_remind_healthy">
        <item>Trời mưa, bạn ra ngoài nhớ mang theo dù, áo mưa</item>
        <item>Gió lạnh bạn nhớ mang áo khoác</item>
        <item>Trời nắng to, bạn nhớ mang theo ô</item>
    </string-array>
    <string name="textview_galery_item_detect">Từ thư viện</string>
    <string name="textview_camera_item_detect">Từ camera</string>
    <string name="message_turn_on_network">Please turn on network</string>
    <string name="content_notification_remind_drug">Nhắc nhở uống thuốc</string>
    <string name="title_notification_remind_drug">Nhắc nhở</string>
    <string name="message_true">true</string>
    <string name="message_false">false</string>
    <string name="number_phone_receive_feedback">01645484112</string>
    <string name="message_send_feedback_success">Send feedback successfully</string>
    <string name="turn_on_gps">android.location.PROVIDERS_CHANGED</string>
    <string name="package_map">com.google.android.apps.maps</string>
    <string name="textview_skip">Skip</string>
    <string name="message_turn_on_network_or_wifi">please turn on network or connect wifi</string>
</resources>
