<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/rl_item_detect_margin"
    android:background="@drawable/hospital_detail_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/pic_default" />

    <RelativeLayout
        android:id="@+id/rl_info_chose_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_item_setting_height"
        android:layout_below="@+id/imgPhoto"
        android:layout_margin="@dimen/rl_item_setting_margin"
        android:layout_marginTop="@dimen/rl_item_chose_photo_margin_top"
        android:background="@color/ll_item_drug_detail_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/textview_item_drug_detail_padding"
            android:text="@string/textview_chose_photo_item_detect"
            android:textColor="@color/background_tab"
            android:textSize="@dimen/textview_item_drug_detail_size"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imageview_chose_pic_down_item_setting"
            android:layout_width="@dimen/imageview_drop_item_drug_detail_width"
            android:layout_height="@dimen/imageview_drop_item_drug_detail_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/imageview_drop_item_drug_detail_margin_right"
            android:contentDescription="@null"
            android:src="@drawable/ic_more" />

        <ImageView
            android:id="@+id/imageview_chose_pic_up_item_setting"
            android:layout_width="@dimen/imageview_drop_item_drug_detail_width"
            android:layout_height="@dimen/imageview_drop_item_drug_detail_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/imageview_drop_item_drug_detail_margin_right"
            android:contentDescription="@null"
            android:src="@drawable/ic_up"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_info_chose_photo_item_detect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ll_chose_photo_item_detect_height"
        android:layout_below="@id/rl_info_chose_photo"
        android:layout_margin="@dimen/ll_item_drug_detail_margin"
        android:layout_marginTop="@dimen/rl_infor_effect_item_drug_detail_margin_top"
        android:background="@color/ll_item_drug_detail_background"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageview_galery_item_detect"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_galery" />

        <TextView
            android:id="@+id/tvGalery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textview_galery_item_detect_margin_start"
            android:layout_marginTop="@dimen/textview_galery_item_detect_margin_top"
            android:layout_toEndOf="@+id/imageview_galery_item_detect"
            android:text="@string/textview_galery_item_detect"
            android:textColor="@color/textview_manufacter_item_detail_drug"
            android:textSize="@dimen/textview_galera_item_detect" />

        <View
            android:id="@+id/view_item_detect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/View_item_detect_height"
            android:layout_below="@+id/tvGalery"
            android:layout_marginTop="@dimen/View_item_detect_margin_top"
            android:background="@color/textview_manufacter_item_detail_drug" />

        <ImageView
            android:id="@+id/imageview_camera_item_detect"
            android:layout_width="@dimen/imageview_item_detect_width"
            android:layout_height="@dimen/imageview_item_detect_height"
            android:layout_below="@+id/view_item_detect"
            android:layout_margin="@dimen/imageview_item_detect_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_item_detect"
            android:layout_marginStart="@dimen/textview_camera_item_detect_margin_left"
            android:layout_marginTop="@dimen/textview_camera_item_detect_margin_top"
            android:layout_toEndOf="@+id/imageview_camera_item_detect"
            android:text="@string/textview_camera_item_detect"
            android:textColor="@color/textview_manufacter_item_detail_drug"
            android:textSize="@dimen/textview_galera_item_detect" />
    </RelativeLayout>
</RelativeLayout>